--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,20 @@
 Package: lutzimporttest
-Title: What the Package Does (One Line, Title Case)
+Title: Test Importing lutz with conditional use of sf.
 Version: 0.0.0.9000
 Authors@R: 
     person("Andy", "Teucher", , "andy.teucher@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7840-692X"))
-Description: What the package does (one paragraph).
+Description: The lutz package has the sf package in Suggests, and only uses sf
+    functions conditionally when using the "acccurate" method, and checks that 
+    sf is installed first. Because sf is in Suggests, it does not get installed
+    automatically when lutz is installed, which makes it tricky for a pacakge 
+    that depends on lutz to use the functionality which depends on sf 
+    (tz_lookup(..., method = "accurate")). The approach here is to include sf in 
+    Imports so that sf is installed automatically in the reverse dependency that
+    requires it. The issue is that because sf functions are not called directly 
+    by the reverse dependency, R CMD check complains about unused imports. The 
+    solution is to include a call to any sf function in a "stub" function that
+    is never actually used in the package. This function is called ignore_unused_imports().
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
